argo/cd/overlays/infra/shared/argo-workflows/patches/argo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  ports:
    - name: http
      port: 2746
      targetPort: 2746
    - name: https
      port: 2746
      targetPort: 2746
  selector:
    app: argo-server
