argo/cd/overlays/infra/shared/argo-workflows/patches/argo-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: ci.dev.tensorleap.ai
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: ci.dev.tensorleap.ai
      http:
        paths:
          - path: /
            backend:
              serviceName: argo-server
              servicePort: https
  tls:
    - hosts:
        - ci.dev.tensorleap.ai
      secretName: argo-ui-tls
